--- a/02_Daily_expances.js/style.css
+++ b/02_Daily_expances.js/style.css
@@ -1,17 +1,17 @@
 body {
-    background-image: url('to-do-list-icon-buy-this-icon-for--0-48-1.png');
-    font-family: Arial, sans-serif;
+    background-image: url('Copilot_20251211_095519.png');
+    background-size: cover;
+    font-family: Georgia, serif;
     text-align: center;
     margin: 0;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #110202;
+    
 }
-
 .container, .main-container, .input-container, #todo-list, h1, input, button {
-    background: #100202;
+    
     border: 3px solid #000000;
     border-radius: 12px;
     box-shadow: 0 2px 16px rgba(25, 118, 210, 0.25);
@@ -19,10 +19,27 @@ body {
     margin: 10px 0;
     box-sizing: border-box;
 }
+.input-container {
+    
+    background-color: rgba(255, 255, 255, 0.5); 
+    padding: 20px;
+    border-radius: 10px;
+  
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px); 
+}
+.container{
+    background-color: rgba(255, 255, 255, 0.5); 
+    padding: 20px;
+    border-radius: 10px;
+  
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px); 
+}
 
-h1 {
-    background: #1976d2;
-    color: #fff;
+h2 {
+    
+    color: #0e0d0d;
     border: none;
     box-shadow: none;
     padding: 18px 0;
@@ -32,8 +49,8 @@ h1 {
 }
 
 .input-container {
-    background: #3ba0ff;
-    border: 2px solid #2d78fb;
+    
+    border: 2px solid #000000;
 }
 
 input {
@@ -53,7 +70,7 @@ button {
 }
 
 button:hover {
-    background: #07ed2d;
+    background: #07ede5;
     color: #fff;
 }
 
